2006-11-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-delete-dialog.c:
	Fixed bug #367744 (filename not correctly displayed)

2006-11-10  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* doc/C/gnome-commander.xml:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-advrename-dialog.c:
	* src/gnome-cmd-advrename-lexer.l:
	* src/gnome-cmd-file-selector.c:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-file.h:
	* src/gnome-cmd-tags-libs.c:
	* src/gnome-cmd-tags-libs.h:
	* src/gnome-cmd-tags.c:
	* src/gnome-cmd-tags.h:
	* src/useractions.c:
	* src/tags/Makefile.am:
	* src/tags/gnome-cmd-tags-audio.c:
	* src/tags/gnome-cmd-tags-audio.h:
	* src/tags/gnome-cmd-tags-id3.c:
	* src/tags/gnome-cmd-tags-id3.h:
	* src/tags/gnome-cmd-tags-libs.c:
	* src/tags/gnome-cmd-tags-libs.h:
	* src/tags/gnome-cmd-tags.c:
	* src/tags/gnome-cmd-tags.h:
	* src/tags/id3lib/Makefile.am:
	* src/tags/id3lib/c_wrapper.cpp:
	* src/tags/id3lib/genres.h:
	* src/tags/id3lib/id3_bugfix.h:
	Added support for ID3 metatags in advrename

	* doc/C/gnome-commander.xml:
	* po/POTFILES.in:
	* src/tags/gnome-cmd-tags.c:
	Fixed inprecise ID3.Duration title


2006-10-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.c:
	* src/gnome-cmd-file-selector.h:
	* src/useractions.c:
	Fixed symlink creation for multiple selection

2006-10-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.c:
	* src/gnome-cmd-tags.c:
	i18n for metatag title and description

	* src/gnome-cmd-chmod-dialog.c:
	* src/gnome-cmd-file-list.c:
	i18n for N_()

2006-10-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.c:
	Reorganized menu buttons for Exif and IPTC

2006-10-23  Dirk Göttel <dgoettel@freenet.de>

	* data/gnome-commander.ebuild:
	Updated ebuild file for gentoo systems
	* data/libiptcdata.ebuild:
        Added ebuild file for gentoo systems

2006-10-23  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.2

