@@ -1,3 +1,8 @@
+2006-11-12  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-delete-dialog.c:
+	i18n
+
 2006-11-11  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-delete-dialog.c:
